--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,5 +1,5 @@
 ---
-import { SOCIALS } from "@config";
+import { SkiCycleRunConfig } from "skicyclerun.config";
 import LinkButton from "./LinkButton.astro";
 import socialIcons from "@assets/socialIcons";
 
@@ -12,16 +12,18 @@ const { centered = false } = Astro.props;
 
 <div class={`social-icons ${centered ? "flex" : ""}`}>
   {
-    SOCIALS.filter(social => social.active).map(social => (
-      <LinkButton
-        href={social.href}
-        className="link-button"
-        title={social.linkTitle}
-      >
-        <Fragment set:html={socialIcons[social.name]} />
-        <span class="sr-only">{social.linkTitle}</span>
-      </LinkButton>
-    ))
+    SkiCycleRunConfig.socials
+      .filter(social => social.active)
+      .map(social => (
+        <LinkButton
+          href={social.href}
+          className="link-button"
+          title={social.linkTitle}
+        >
+          <Fragment set:html={socialIcons[social.name]} />
+          <span class="sr-only">{social.linkTitle}</span>
+        </LinkButton>
+      ))
   }
 </div>
 
