--- a/src/layouts/AboutLayout.astro
+++ b/src/layouts/AboutLayout.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE } from "@config";
+import { SkiCycleRunConfig } from "skicyclerun.config";
 import Breadcrumbs from "@components/Breadcrumbs.astro";
 import Header from "@components/Header.astro";
 import Footer from "@components/Footer.astro";
@@ -15,7 +15,7 @@ export interface Props {
 const { frontmatter } = Astro.props;
 ---
 
-<Layout title={`${frontmatter.title} | ${SITE.title}`}>
+<Layout title={`${frontmatter.title} | ${SkiCycleRunConfig.title}`}>
   <Header activeNav="about" />
   <Breadcrumbs />
   <main id="main-content">
