--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -22,9 +22,9 @@ const { currentPage, totalPages, paginatedPosts } = Astro.props;
 const coverImages = await Promise.all(
   paginatedPosts.map(post => getPhotoCover(post.data.cover ?? "mtntops.svg"))
 );
-paginatedPosts.forEach(post => {
-  console.log('[Posts.astro] title:', post.data.title, 'slug:', post.slug, 'frontmatter.slug:', post.data.slug);
-});
+// paginatedPosts.forEach(post => {
+//   console.log('[Posts.astro] title:', post.data.title, 'slug:', post.slug, 'frontmatter.slug:', post.data.slug);
+// });
 ---
 
 <Layout title={`Posts | ${SkiCycleRunConfig.title}`}>
