--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ const {
 } = Astro.props;
 
 const socialImageURL = new URL(
-  ogImage ?? SkiCycleRunConfig.ogImage ?? "og.png",
+  ogImage ?? SkiCycleRunConfig.ogImage ?? "skicyclerun-og.png",
   Astro.url.origin
 ).href;
 ---
@@ -50,7 +50,7 @@ const socialImageURL = new URL(
     <meta name="author" content={author} />
     <link rel="sitemap" href="/sitemap-index.xml" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / Social Sites Static Image generator -->
     <meta property="og:title" content={title} />
     <meta property="og:description" content={description} />
     <meta property="og:url" content={canonicalURL} />
