--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -20,7 +20,7 @@ const { currentPage, totalPages, paginatedPosts } = Astro.props;
 
 // Fetch cover images for all posts
 const coverImages = await Promise.all(
-  paginatedPosts.map(post => getPhotoCover(post.data.cover ?? "mtntops.svg"))
+  paginatedPosts.map(post => getPhotoCover(post.data.cover ?? "default-cover.png"))
 );
 // paginatedPosts.forEach(post => {
 //   console.log('[Posts.astro] title:', post.data.title, 'slug:', post.slug, 'frontmatter.slug:', post.data.slug);
