--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,12 +6,11 @@ import Footer from "@components/Footer.astro";
 import LinkButton from "@components/LinkButton.astro";
 import Hr from "@components/Hr.astro";
 import Card from "@components/Card";
-import Socials from "@components/Socials.astro";
 import getSortedPosts from "@utils/getSortedPosts";
 import { SkiCycleRunConfig } from "skicyclerun.config";
 
 import { Image } from "astro:assets";
-import mtnTops from "@images/mtntops.svg";
+import mtnTops from "@svg_imgs/mtntops.svg";
 
 const posts = await getCollection("blog");
 
