--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -32,8 +32,8 @@ const { currentPage, totalPages, paginatedPosts } = Astro.props;
   <Pagination
     {currentPage}
     {totalPages}
-    prevUrl={`/posts${currentPage - 1 !== 1 ? "/" + (currentPage - 1) : ""}`}
-    nextUrl={`/posts/${currentPage + 1}`}
+    prevUrl={currentPage === 2 ? "/posts/" : `/posts/page/${currentPage - 1}`}
+    nextUrl={`/posts/page/${currentPage + 1}`}
   />
 
   <Footer noMarginTop={totalPages > 1} />
